# LeadForge-AI

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  PROJECT_HANDOFF.md  README.md  docker-compose.yml  railway.json
backend/: Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_icp_search_queries.py  0003_account_research.py  0004_contact_influence.py  0005_signal_feed_index.py  0006_company_classification_status.py  0007_icp_active.py  0008_settings.py  0009_classification_label.py
backend/app/: __init__.py  cli.py  main.py
backend/app/ai/: chat_engine.py  demo_data.py  enrichment_engine.py  eval.py  icp_engine.py  openai_client.py  opportunity_engine.py  outreach_engine.py  prompts.py  qualification_engine.py  query_engine.py  rag.py  research_engine.py  schemas.py  scoring_engine.py  signal_engine.py
backend/app/core/: celery_app.py  config.py  crypto.py  database.py  deps.py  errors.py  logging.py  rate_limit.py  security.py
backend/app/models/: __init__.py  _mixins.py  billing.py  campaign.py  company.py  contact.py  crm.py  icp.py  project.py  research.py  scoring.py  settings.py  signal.py  tenant.py  workflow.py
backend/app/schemas/: __init__.py  billing.py  chat.py  (+15 more)
backend/tests/: test_contact_intelligence.py  test_dashboard.py  test_discovery.py  test_inbox_match.py  test_qualification.py  test_query_and_competitor.py  test_research.py  test_scoring_engine.py  test_ssrf_and_fixes.py  test_techstack_and_enrichment.py  test_workflow_engine.py
(+121 files in other folders)
