[project]
name = "leadforge-backend"
version = "0.1.0"
description = "LeadForge AI backend"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "N"]
ignore = ["S101", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --cov=app --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
strict = false
plugins = ["pydantic.mypy"]
